test/trivial/bradc/defaultinit2.good
defaultinit2.chpl:1 ERROR: syntax error
yytext is: mybool
