test/trivial/bradc/defaultinit2.chpl
typedef mybool: bool = true;
typedef myinteger: integer = 1;
typedef myfloat: float = 2.3;
typedef mycomplex: complex = 4.5 + 6.7i;
typedef mystring: string = "empty";

var a: mybool;
var b: myinteger;
var c: myfloat;
var d: mycomplex;
var e: mystring;

writeln("a is: ", a);
writeln("b is: ", b);
writeln("c is: ", c);
writeln("d is: ", d);
writeln("e is: ", e);
